// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LoadingSpinner Snapshots > Combined Props Snapshots > should match snapshot with all custom props 1`] = `
<div
  data-testid="loading-spinner"
  style="display: flex; justify-content: center; align-items: center; height: 300px;"
>
  <div
    class="ant-spin-nested-loading css-dev-only-do-not-override-1odpy5d"
  >
    <div>
      <div
        aria-busy="true"
        aria-live="polite"
        class="ant-spin ant-spin-spinning ant-spin-show-text css-dev-only-do-not-override-1odpy5d"
      >
        <span
          class="ant-spin-dot-holder"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </span>
        <div
          class="ant-spin-text"
        >
          Processing data...
        </div>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <div
        style="min-height: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`LoadingSpinner Snapshots > Combined Props Snapshots > should match snapshot with large size, long tip, and custom height 1`] = `
<div
  data-testid="loading-spinner"
  style="display: flex; justify-content: center; align-items: center; height: 500px;"
>
  <div
    class="ant-spin-nested-loading css-dev-only-do-not-override-1odpy5d"
  >
    <div>
      <div
        aria-busy="true"
        aria-live="polite"
        class="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text css-dev-only-do-not-override-1odpy5d"
      >
        <span
          class="ant-spin-dot-holder"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </span>
        <div
          class="ant-spin-text"
        >
          Loading large dataset, this may take a few moments...
        </div>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <div
        style="min-height: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`LoadingSpinner Snapshots > Combined Props Snapshots > should match snapshot with minimal height and no tip 1`] = `
<div
  data-testid="loading-spinner"
  style="display: flex; justify-content: center; align-items: center; height: 50px;"
>
  <div
    class="ant-spin-nested-loading css-dev-only-do-not-override-1odpy5d"
  >
    <div>
      <div
        aria-busy="true"
        aria-live="polite"
        class="ant-spin ant-spin-sm ant-spin-spinning css-dev-only-do-not-override-1odpy5d"
      >
        <span
          class="ant-spin-dot-holder"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </span>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <div
        style="min-height: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`LoadingSpinner Snapshots > Combined Props Snapshots > should match snapshot with small size and custom tip 1`] = `
<div
  data-testid="loading-spinner"
  style="display: flex; justify-content: center; align-items: center; height: 400px;"
>
  <div
    class="ant-spin-nested-loading css-dev-only-do-not-override-1odpy5d"
  >
    <div>
      <div
        aria-busy="true"
        aria-live="polite"
        class="ant-spin ant-spin-sm ant-spin-spinning ant-spin-show-text css-dev-only-do-not-override-1odpy5d"
      >
        <span
          class="ant-spin-dot-holder"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </span>
        <div
          class="ant-spin-text"
        >
          Saving...
        </div>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <div
        style="min-height: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`LoadingSpinner Snapshots > Component Structure Snapshots > should match snapshot of wrapper div only 1`] = `
<div
  data-testid="loading-spinner"
  style="display: flex; justify-content: center; align-items: center; height: 400px;"
>
  <div
    class="ant-spin-nested-loading css-dev-only-do-not-override-1odpy5d"
  >
    <div>
      <div
        aria-busy="true"
        aria-live="polite"
        class="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text css-dev-only-do-not-override-1odpy5d"
      >
        <span
          class="ant-spin-dot-holder"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </span>
        <div
          class="ant-spin-text"
        >
          Loading...
        </div>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <div
        style="min-height: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`LoadingSpinner Snapshots > Component Structure Snapshots > should match snapshot showing complete component structure 1`] = `
<div>
  <div
    data-testid="loading-spinner"
    style="display: flex; justify-content: center; align-items: center; height: 400px;"
  >
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-1odpy5d"
    >
      <div>
        <div
          aria-busy="true"
          aria-live="polite"
          class="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text css-dev-only-do-not-override-1odpy5d"
        >
          <span
            class="ant-spin-dot-holder"
          >
            <span
              class="ant-spin-dot ant-spin-dot-spin"
            >
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
            </span>
          </span>
          <div
            class="ant-spin-text"
          >
            Complete structure test
          </div>
        </div>
      </div>
      <div
        class="ant-spin-container ant-spin-blur"
      >
        <div
          style="min-height: 200px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`LoadingSpinner Snapshots > Default Props Snapshots > should match snapshot with default props 1`] = `
<div
  data-testid="loading-spinner"
  style="display: flex; justify-content: center; align-items: center; height: 400px;"
>
  <div
    class="ant-spin-nested-loading css-dev-only-do-not-override-1odpy5d"
  >
    <div>
      <div
        aria-busy="true"
        aria-live="polite"
        class="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text css-dev-only-do-not-override-1odpy5d"
      >
        <span
          class="ant-spin-dot-holder"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </span>
        <div
          class="ant-spin-text"
        >
          Loading...
        </div>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <div
        style="min-height: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`LoadingSpinner Snapshots > Edge Cases Snapshots > should match snapshot with numeric characters in tip 1`] = `
<div
  data-testid="loading-spinner"
  style="display: flex; justify-content: center; align-items: center; height: 400px;"
>
  <div
    class="ant-spin-nested-loading css-dev-only-do-not-override-1odpy5d"
  >
    <div>
      <div
        aria-busy="true"
        aria-live="polite"
        class="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text css-dev-only-do-not-override-1odpy5d"
      >
        <span
          class="ant-spin-dot-holder"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </span>
        <div
          class="ant-spin-text"
        >
          Loading 12345...
        </div>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <div
        style="min-height: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`LoadingSpinner Snapshots > Edge Cases Snapshots > should match snapshot with special unicode characters 1`] = `
<div
  data-testid="loading-spinner"
  style="display: flex; justify-content: center; align-items: center; height: 400px;"
>
  <div
    class="ant-spin-nested-loading css-dev-only-do-not-override-1odpy5d"
  >
    <div>
      <div
        aria-busy="true"
        aria-live="polite"
        class="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text css-dev-only-do-not-override-1odpy5d"
      >
        <span
          class="ant-spin-dot-holder"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </span>
        <div
          class="ant-spin-text"
        >
          Загрузка... ☕ 読み込み中
        </div>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <div
        style="min-height: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`LoadingSpinner Snapshots > Edge Cases Snapshots > should match snapshot with very large height 1`] = `
<div
  data-testid="loading-spinner"
  style="display: flex; justify-content: center; align-items: center; height: 9999px;"
>
  <div
    class="ant-spin-nested-loading css-dev-only-do-not-override-1odpy5d"
  >
    <div>
      <div
        aria-busy="true"
        aria-live="polite"
        class="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text css-dev-only-do-not-override-1odpy5d"
      >
        <span
          class="ant-spin-dot-holder"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </span>
        <div
          class="ant-spin-text"
        >
          Loading...
        </div>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <div
        style="min-height: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`LoadingSpinner Snapshots > Edge Cases Snapshots > should match snapshot with zero height 1`] = `
<div
  data-testid="loading-spinner"
  style="display: flex; justify-content: center; align-items: center; height: 0px;"
>
  <div
    class="ant-spin-nested-loading css-dev-only-do-not-override-1odpy5d"
  >
    <div>
      <div
        aria-busy="true"
        aria-live="polite"
        class="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text css-dev-only-do-not-override-1odpy5d"
      >
        <span
          class="ant-spin-dot-holder"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </span>
        <div
          class="ant-spin-text"
        >
          Loading...
        </div>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <div
        style="min-height: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`LoadingSpinner Snapshots > Height Variations Snapshots > should match snapshot with calc height 1`] = `
<div
  data-testid="loading-spinner"
  style="display: flex; justify-content: center; align-items: center; height: calc(100% - 50px);"
>
  <div
    class="ant-spin-nested-loading css-dev-only-do-not-override-1odpy5d"
  >
    <div>
      <div
        aria-busy="true"
        aria-live="polite"
        class="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text css-dev-only-do-not-override-1odpy5d"
      >
        <span
          class="ant-spin-dot-holder"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </span>
        <div
          class="ant-spin-text"
        >
          Loading...
        </div>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <div
        style="min-height: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`LoadingSpinner Snapshots > Height Variations Snapshots > should match snapshot with custom pixel height 1`] = `
<div
  data-testid="loading-spinner"
  style="display: flex; justify-content: center; align-items: center; height: 600px;"
>
  <div
    class="ant-spin-nested-loading css-dev-only-do-not-override-1odpy5d"
  >
    <div>
      <div
        aria-busy="true"
        aria-live="polite"
        class="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text css-dev-only-do-not-override-1odpy5d"
      >
        <span
          class="ant-spin-dot-holder"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </span>
        <div
          class="ant-spin-text"
        >
          Loading...
        </div>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <div
        style="min-height: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`LoadingSpinner Snapshots > Height Variations Snapshots > should match snapshot with percentage height 1`] = `
<div
  data-testid="loading-spinner"
  style="display: flex; justify-content: center; align-items: center; height: 50%;"
>
  <div
    class="ant-spin-nested-loading css-dev-only-do-not-override-1odpy5d"
  >
    <div>
      <div
        aria-busy="true"
        aria-live="polite"
        class="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text css-dev-only-do-not-override-1odpy5d"
      >
        <span
          class="ant-spin-dot-holder"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </span>
        <div
          class="ant-spin-text"
        >
          Loading...
        </div>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <div
        style="min-height: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`LoadingSpinner Snapshots > Height Variations Snapshots > should match snapshot with small height 1`] = `
<div
  data-testid="loading-spinner"
  style="display: flex; justify-content: center; align-items: center; height: 100px;"
>
  <div
    class="ant-spin-nested-loading css-dev-only-do-not-override-1odpy5d"
  >
    <div>
      <div
        aria-busy="true"
        aria-live="polite"
        class="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text css-dev-only-do-not-override-1odpy5d"
      >
        <span
          class="ant-spin-dot-holder"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </span>
        <div
          class="ant-spin-text"
        >
          Loading...
        </div>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <div
        style="min-height: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`LoadingSpinner Snapshots > Height Variations Snapshots > should match snapshot with viewport height 1`] = `
<div
  data-testid="loading-spinner"
  style="display: flex; justify-content: center; align-items: center; height: 100vh;"
>
  <div
    class="ant-spin-nested-loading css-dev-only-do-not-override-1odpy5d"
  >
    <div>
      <div
        aria-busy="true"
        aria-live="polite"
        class="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text css-dev-only-do-not-override-1odpy5d"
      >
        <span
          class="ant-spin-dot-holder"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </span>
        <div
          class="ant-spin-text"
        >
          Loading...
        </div>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <div
        style="min-height: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`LoadingSpinner Snapshots > Multiple Instances Snapshots > should match snapshot with identical spinners 1`] = `
<div>
  <div
    data-testid="loading-spinner"
    style="display: flex; justify-content: center; align-items: center; height: 400px;"
  >
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-1odpy5d"
    >
      <div>
        <div
          aria-busy="true"
          aria-live="polite"
          class="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text css-dev-only-do-not-override-1odpy5d"
        >
          <span
            class="ant-spin-dot-holder"
          >
            <span
              class="ant-spin-dot ant-spin-dot-spin"
            >
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
            </span>
          </span>
          <div
            class="ant-spin-text"
          >
            Loading...
          </div>
        </div>
      </div>
      <div
        class="ant-spin-container ant-spin-blur"
      >
        <div
          style="min-height: 200px;"
        />
      </div>
    </div>
  </div>
  <div
    data-testid="loading-spinner"
    style="display: flex; justify-content: center; align-items: center; height: 400px;"
  >
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-1odpy5d"
    >
      <div>
        <div
          aria-busy="true"
          aria-live="polite"
          class="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text css-dev-only-do-not-override-1odpy5d"
        >
          <span
            class="ant-spin-dot-holder"
          >
            <span
              class="ant-spin-dot ant-spin-dot-spin"
            >
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
            </span>
          </span>
          <div
            class="ant-spin-text"
          >
            Loading...
          </div>
        </div>
      </div>
      <div
        class="ant-spin-container ant-spin-blur"
      >
        <div
          style="min-height: 200px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`LoadingSpinner Snapshots > Multiple Instances Snapshots > should match snapshot with multiple different spinners 1`] = `
<div>
  <div
    data-testid="loading-spinner"
    style="display: flex; justify-content: center; align-items: center; height: 200px;"
  >
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-1odpy5d"
    >
      <div>
        <div
          aria-busy="true"
          aria-live="polite"
          class="ant-spin ant-spin-sm ant-spin-spinning ant-spin-show-text css-dev-only-do-not-override-1odpy5d"
        >
          <span
            class="ant-spin-dot-holder"
          >
            <span
              class="ant-spin-dot ant-spin-dot-spin"
            >
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
            </span>
          </span>
          <div
            class="ant-spin-text"
          >
            Loading 1
          </div>
        </div>
      </div>
      <div
        class="ant-spin-container ant-spin-blur"
      >
        <div
          style="min-height: 200px;"
        />
      </div>
    </div>
  </div>
  <div
    data-testid="loading-spinner"
    style="display: flex; justify-content: center; align-items: center; height: 300px;"
  >
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-1odpy5d"
    >
      <div>
        <div
          aria-busy="true"
          aria-live="polite"
          class="ant-spin ant-spin-spinning ant-spin-show-text css-dev-only-do-not-override-1odpy5d"
        >
          <span
            class="ant-spin-dot-holder"
          >
            <span
              class="ant-spin-dot ant-spin-dot-spin"
            >
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
            </span>
          </span>
          <div
            class="ant-spin-text"
          >
            Loading 2
          </div>
        </div>
      </div>
      <div
        class="ant-spin-container ant-spin-blur"
      >
        <div
          style="min-height: 200px;"
        />
      </div>
    </div>
  </div>
  <div
    data-testid="loading-spinner"
    style="display: flex; justify-content: center; align-items: center; height: 400px;"
  >
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-1odpy5d"
    >
      <div>
        <div
          aria-busy="true"
          aria-live="polite"
          class="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text css-dev-only-do-not-override-1odpy5d"
        >
          <span
            class="ant-spin-dot-holder"
          >
            <span
              class="ant-spin-dot ant-spin-dot-spin"
            >
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
            </span>
          </span>
          <div
            class="ant-spin-text"
          >
            Loading 3
          </div>
        </div>
      </div>
      <div
        class="ant-spin-container ant-spin-blur"
      >
        <div
          style="min-height: 200px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`LoadingSpinner Snapshots > Size Variations Snapshots > should match snapshot with default size 1`] = `
<div
  data-testid="loading-spinner"
  style="display: flex; justify-content: center; align-items: center; height: 400px;"
>
  <div
    class="ant-spin-nested-loading css-dev-only-do-not-override-1odpy5d"
  >
    <div>
      <div
        aria-busy="true"
        aria-live="polite"
        class="ant-spin ant-spin-spinning ant-spin-show-text css-dev-only-do-not-override-1odpy5d"
      >
        <span
          class="ant-spin-dot-holder"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </span>
        <div
          class="ant-spin-text"
        >
          Loading...
        </div>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <div
        style="min-height: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`LoadingSpinner Snapshots > Size Variations Snapshots > should match snapshot with large size 1`] = `
<div
  data-testid="loading-spinner"
  style="display: flex; justify-content: center; align-items: center; height: 400px;"
>
  <div
    class="ant-spin-nested-loading css-dev-only-do-not-override-1odpy5d"
  >
    <div>
      <div
        aria-busy="true"
        aria-live="polite"
        class="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text css-dev-only-do-not-override-1odpy5d"
      >
        <span
          class="ant-spin-dot-holder"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </span>
        <div
          class="ant-spin-text"
        >
          Loading...
        </div>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <div
        style="min-height: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`LoadingSpinner Snapshots > Size Variations Snapshots > should match snapshot with small size 1`] = `
<div
  data-testid="loading-spinner"
  style="display: flex; justify-content: center; align-items: center; height: 400px;"
>
  <div
    class="ant-spin-nested-loading css-dev-only-do-not-override-1odpy5d"
  >
    <div>
      <div
        aria-busy="true"
        aria-live="polite"
        class="ant-spin ant-spin-sm ant-spin-spinning ant-spin-show-text css-dev-only-do-not-override-1odpy5d"
      >
        <span
          class="ant-spin-dot-holder"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </span>
        <div
          class="ant-spin-text"
        >
          Loading...
        </div>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <div
        style="min-height: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`LoadingSpinner Snapshots > Tip Text Variations Snapshots > should match snapshot with custom tip 1`] = `
<div
  data-testid="loading-spinner"
  style="display: flex; justify-content: center; align-items: center; height: 400px;"
>
  <div
    class="ant-spin-nested-loading css-dev-only-do-not-override-1odpy5d"
  >
    <div>
      <div
        aria-busy="true"
        aria-live="polite"
        class="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text css-dev-only-do-not-override-1odpy5d"
      >
        <span
          class="ant-spin-dot-holder"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </span>
        <div
          class="ant-spin-text"
        >
          Please wait...
        </div>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <div
        style="min-height: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`LoadingSpinner Snapshots > Tip Text Variations Snapshots > should match snapshot with empty tip 1`] = `
<div
  data-testid="loading-spinner"
  style="display: flex; justify-content: center; align-items: center; height: 400px;"
>
  <div
    class="ant-spin-nested-loading css-dev-only-do-not-override-1odpy5d"
  >
    <div>
      <div
        aria-busy="true"
        aria-live="polite"
        class="ant-spin ant-spin-lg ant-spin-spinning css-dev-only-do-not-override-1odpy5d"
      >
        <span
          class="ant-spin-dot-holder"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </span>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <div
        style="min-height: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`LoadingSpinner Snapshots > Tip Text Variations Snapshots > should match snapshot with long tip text 1`] = `
<div
  data-testid="loading-spinner"
  style="display: flex; justify-content: center; align-items: center; height: 400px;"
>
  <div
    class="ant-spin-nested-loading css-dev-only-do-not-override-1odpy5d"
  >
    <div>
      <div
        aria-busy="true"
        aria-live="polite"
        class="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text css-dev-only-do-not-override-1odpy5d"
      >
        <span
          class="ant-spin-dot-holder"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </span>
        <div
          class="ant-spin-text"
        >
          This is a very long loading message that might wrap to multiple lines
        </div>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <div
        style="min-height: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`LoadingSpinner Snapshots > Tip Text Variations Snapshots > should match snapshot with special characters in tip 1`] = `
<div
  data-testid="loading-spinner"
  style="display: flex; justify-content: center; align-items: center; height: 400px;"
>
  <div
    class="ant-spin-nested-loading css-dev-only-do-not-override-1odpy5d"
  >
    <div>
      <div
        aria-busy="true"
        aria-live="polite"
        class="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text css-dev-only-do-not-override-1odpy5d"
      >
        <span
          class="ant-spin-dot-holder"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </span>
        <div
          class="ant-spin-text"
        >
          Loading... 🔄 (50%)
        </div>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <div
        style="min-height: 200px;"
      />
    </div>
  </div>
</div>
`;
